--- a/templates/admin.html
+++ b/templates/admin.html
@@ -215,6 +215,7 @@
         <a class="navbar-brand fs-5 fw-bold" href="/">AbsoluteCinema</a>
         <div class="d-flex gap-3 ms-auto">
           <a class="nav-link" href="/">Beranda</a>
+          <a class="nav-link" href="/admin/movies">Kelola Film</a>
           {% if session.get('user') %}
           <a class="nav-link" href="#">{{ session.get('user')['name'] }}</a>
           <a class="nav-link" href="/logout">Logout</a>
