--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Halaman Profil - Menampilkan informasi user dan riwayat pemesanan tiket -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Profile - AbsoluteCinema</title>
