--- a/templates/book.html
+++ b/templates/book.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Halaman Pemesanan Tiket - User memilih kursi, jenis tiket, dan jadwal tayang -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pemesanan Tiket - AbsoluteCinema</title>
