--- a/templates/movie_form.html
+++ b/templates/movie_form.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Form Tambah/Edit Film - Admin dapat mengisi data film untuk ditambahkan atau diedit -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
