--- a/templates/users.html
+++ b/templates/users.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Halaman Manajemen User Admin - Admin dapat melihat semua user dan upgrade ke VIP -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Users - AbsoluteCinema</title>
